package com.example.design.Command;

public interface Order {
   void execute();
}